--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "three": "^0.170.0",
     "web-vitals": "^2.1.4"
